--- a/samples/examples/person-card-get.html
+++ b/samples/examples/person-card-get.html
@@ -15,9 +15,8 @@
           <template data-type="additional-details">
             <mgt-get resource="/users/{{ person.id }}/profile" version="beta">
               <template>
-                {{{ console.log(this) }}}
                 <div>
-                  <!-- <div data-if="positions && positions.length">
+                  <div data-if="positions && positions.length">
                     <h2>Work history</h2>
                     <div data-for="position in positions">
                       <b>{{ position.detail.jobTitle }}</b> ({{ position.detail.company.department }})
@@ -40,18 +39,20 @@
                       </div>
                     </div>
                     <hr />
-                  </div> -->
+                  </div>
                   <div>
                     <h2>Interests</h2>
                     <span data-for="interest in interests">
-                      {{ interest.displayName }}<span data-if="$index < interests.length - 1">, </span></span
-                    >
+                      {{ interest.displayName }}<span data-if="$index < interests.length - 1">, </span>
+                    </span>
                     <hr />
                   </div>
-                  <!-- <div data-if="languages && languages.length">
+                  <div data-if="languages && languages.length">
                     <h2>Languages</h2>
-                    <span data-for="language in languages"> {{ language.displayName }}, </span>
-                  </div> -->
+                    <span data-for="language in languages">
+                      {{ language.displayName }}<span data-if="$index < languages.length - 1">, </span>
+                    </span>
+                  </div>
                 </div>
               </template>
             </mgt-get>
