working both directions

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <mgt-login></mgt-login>
     <mgt-person person-query="me" person-card="click"></mgt-person>
-    <mgt-agenda></mgt-agenda>
+    <mgt-tasks></mgt-tasks>
 
     <mgt-flyout>
       <div>hello</div>
