Switching from signed-in to -out to prevent breaking change

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       depends-on="mgt-teams-provider"
     ></mgt-msal-provider>
 
-    <!-- <mgt-mock-provider signed-in></mgt-mock-provider> -->
+    <mgt-mock-provider></mgt-mock-provider>
 
     <mgt-login></mgt-login>
     <mgt-person person-query="me" show-name show-email person-card="hover"></mgt-person>
