--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     <script src="https://unpkg.com/@microsoft/teams-js/dist/MicrosoftTeams.min.js" crossorigin="anonymous"></script>
 
-    <script src="./dist/bundle/mgt-loader.js"></script>
+    <!-- <script src="./dist/bundle/mgt-loader.js"></script> -->
 
-    <!-- <script type="module" src="dist/es6/index.js"></script> -->
-    <!-- <script type="module" src="./dist/es6/mock/mgt-mock-provider.js"></script> -->
+    <script type="module" src="dist/es6/index.js"></script>
+    <script type="module" src="./dist/es6/mock/mgt-mock-provider.js"></script>
   </head>
 
   <body>
@@ -33,9 +33,9 @@
 
     <mgt-login></mgt-login>
     <mgt-person person-query="me" show-name show-email person-card="hover"></mgt-person>
-    <!-- <mgt-people-picker></mgt-people-picker> -->
-    <mgt-tasks data-source="planner"></mgt-tasks>
-    <!-- <mgt-agenda group-by-day></mgt-agenda>
-    <mgt-people></mgt-people> -->
+    <mgt-people-picker></mgt-people-picker>
+    <mgt-tasks data-source="todo"></mgt-tasks>
+    <mgt-agenda group-by-day></mgt-agenda>
+    <mgt-people></mgt-people>
   </body>
 </html>
