Added refresh() and polling-rate now works for any api

--- a/samples/examples/mgt-get-teams-messages.html
+++ b/samples/examples/mgt-get-teams-messages.html
@@ -16,6 +16,12 @@
       </template>
     </mgt-get>
 
+    <!-- <mgt-get resource="/me/presence" version="beta" scopes="Presence.Read" polling-rate="2000">
+      <template>
+        {{availability}}
+      </template>
+    </mgt-get> -->
+
     <mgt-get id="channelsGet">
       <template>
         Channel:
