Updating project exports and tweaking build

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <!-- <script src="./dist/bundle/mgt-loader.js"></script> -->
 
-    <script type="module" src="dist/es6/index.js"></script>
-    <script type="module" src="./dist/es6/mock/mgt-mock-provider.js"></script>
+    <script type="module" src="dist/es6/mgt/index.js"></script>
+    <script type="module" src="./dist/es6/mgt/mock/mgt-mock-provider.js"></script>
   </head>
 
   <body>
