--- a/samples/examples/simple-provider.html
+++ b/samples/examples/simple-provider.html
@@ -1,200 +1,211 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Quickstart for MSAL JS</title>
     <script src="https://secure.aadcdn.microsoftonline-p.com/lib/1.0.0/js/msal.js"></script>
     <script src="https://unpkg.com/@microsoft/mgt/dist/bundle/mgt-loader.js"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <div class="leftContainer">
-            <p id="WelcomeMessage">Welcome to the Microsoft Authentication Library For Javascript Quickstart</p>
-            <button id="SignIn" onclick="signIn()">Sign In</button>
-        </div>
-        <div class="rightContainer">
-            <pre id="json"></pre>
-        </div>
+      <div class="leftContainer">
+        <p id="WelcomeMessage">Welcome to the Microsoft Authentication Library For Javascript Quickstart</p>
+        <button id="SignIn" onclick="signIn()">Sign In</button>
+      </div>
+      <div class="rightContainer">
+        <pre id="json"></pre>
+      </div>
 
-        <mgt-people></mgt-people>
+      <mgt-people></mgt-people>
 
-        <mgt-agenda group-by-day></mgt-agenda>
-        <mgt-tasks data-source="todo"></mgt-tasks>
-        
+      <mgt-agenda group-by-day></mgt-agenda>
+      <mgt-tasks data-source="planner"></mgt-tasks>
     </div>
-<script>
-    var msalConfig = {
+    <script>
+      var msalConfig = {
         auth: {
-            clientId: 'a974dfa0-9f57-49b9-95db-90f04ce2111a', //This is your client ID
-            authority: "https://login.microsoftonline.com/common" //This is your tenant info
+          clientId: 'a974dfa0-9f57-49b9-95db-90f04ce2111a', //This is your client ID
+          authority: 'https://login.microsoftonline.com/common' //This is your tenant info
         },
         cache: {
-            cacheLocation: "localStorage",
-            storeAuthStateInCookie: true
+          cacheLocation: 'localStorage',
+          storeAuthStateInCookie: true
         }
-    };
+      };
 
-    var graphConfig = {
-        graphMeEndpoint: "https://graph.microsoft.com/v1.0/me"
-    };
+      var graphConfig = {
+        graphMeEndpoint: 'https://graph.microsoft.com/v1.0/me'
+      };
 
-    // create a request object for login or token request calls
-    // In scenarios with incremental consent, the request object can be further customized
-    var requestObj = {
-        scopes: ["user.read"]
-    };
+      // create a request object for login or token request calls
+      // In scenarios with incremental consent, the request object can be further customized
+      var requestObj = {
+        scopes: ['user.read']
+      };
 
-    var myMSALObj = new Msal.UserAgentApplication(msalConfig);
+      var myMSALObj = new Msal.UserAgentApplication(msalConfig);
 
-    // Register Callbacks for redirect flow
-    // myMSALObj.handleRedirectCallbacks(acquireTokenRedirectCallBack, acquireTokenErrorRedirectCallBack);
-    myMSALObj.handleRedirectCallback(authRedirectCallBack);
+      // Register Callbacks for redirect flow
+      // myMSALObj.handleRedirectCallbacks(acquireTokenRedirectCallBack, acquireTokenErrorRedirectCallBack);
+      myMSALObj.handleRedirectCallback(authRedirectCallBack);
 
-    mgt.Providers.globalProvider = new mgt.SimpleProvider(async function(scopes){
+      mgt.Providers.globalProvider = new mgt.SimpleProvider(async function(scopes) {
         var request = { scopes: scopes };
 
         try {
-            let response = await myMSALObj.acquireTokenSilent(request);
-            return response.accessToken;
+          let response = await myMSALObj.acquireTokenSilent(request);
+          return response.accessToken;
         } catch (error) {
-            if (requiresInteraction(error.errorCode)) {
-                myMSALObj.acquireTokenRedirect(request);
-            }
+          if (requiresInteraction(error.errorCode)) {
+            myMSALObj.acquireTokenRedirect(request);
+          }
         }
-    })
+      });
 
-    function signIn() {
-        myMSALObj.loginPopup(requestObj).then(function (loginResponse) {
+      function signIn() {
+        myMSALObj
+          .loginPopup(requestObj)
+          .then(function(loginResponse) {
             //Successful login
             showWelcomeMessage();
             //Call MS Graph using the token in the response
             acquireTokenPopupAndCallMSGraph();
-        }).catch(function (error) {
+          })
+          .catch(function(error) {
             //Please check the console for errors
             console.log(error);
-        });
-    }
+          });
+      }
 
-    function signOut() {
+      function signOut() {
         myMSALObj.logout();
-    }
+      }
 
-    function acquireTokenPopupAndCallMSGraph() {
+      function acquireTokenPopupAndCallMSGraph() {
         //Always start with acquireTokenSilent to obtain a token in the signed in user from cache
-        myMSALObj.acquireTokenSilent(requestObj).then(function (tokenResponse) {
+        myMSALObj
+          .acquireTokenSilent(requestObj)
+          .then(function(tokenResponse) {
             callMSGraph(graphConfig.graphMeEndpoint, tokenResponse.accessToken, graphAPICallback);
-        }).catch(function (error) {
+          })
+          .catch(function(error) {
             console.log(error);
             // Upon acquireTokenSilent failure (due to consent or interaction or login required ONLY)
-            // Call acquireTokenPopup(popup window) 
+            // Call acquireTokenPopup(popup window)
             if (requiresInteraction(error.errorCode)) {
-                myMSALObj.acquireTokenPopup(requestObj).then(function (tokenResponse) {
-                    callMSGraph(graphConfig.graphMeEndpoint, tokenResponse.accessToken, graphAPICallback);
-                }).catch(function (error) {
-                    console.log(error);
+              myMSALObj
+                .acquireTokenPopup(requestObj)
+                .then(function(tokenResponse) {
+                  callMSGraph(graphConfig.graphMeEndpoint, tokenResponse.accessToken, graphAPICallback);
+                })
+                .catch(function(error) {
+                  console.log(error);
                 });
             }
-        });
-    }
+          });
+      }
 
-    function callMSGraph(theUrl, accessToken, callback) {
+      function callMSGraph(theUrl, accessToken, callback) {
         var xmlHttp = new XMLHttpRequest();
-        xmlHttp.onreadystatechange = function () {
-            if (this.readyState == 4 && this.status == 200)
-                callback(JSON.parse(this.responseText));
-        }
-        xmlHttp.open("GET", theUrl, true); // true for asynchronous
+        xmlHttp.onreadystatechange = function() {
+          if (this.readyState == 4 && this.status == 200) callback(JSON.parse(this.responseText));
+        };
+        xmlHttp.open('GET', theUrl, true); // true for asynchronous
         xmlHttp.setRequestHeader('Authorization', 'Bearer ' + accessToken);
         xmlHttp.send();
-    }
+      }
 
-    function graphAPICallback(data) {
-        document.getElementById("json").innerHTML = JSON.stringify(data, null, 2);
-    }
+      function graphAPICallback(data) {
+        document.getElementById('json').innerHTML = JSON.stringify(data, null, 2);
+      }
 
-    function showWelcomeMessage() {
+      function showWelcomeMessage() {
         mgt.Providers.globalProvider.setState(mgt.ProviderState.SignedIn);
 
         var divWelcome = document.getElementById('WelcomeMessage');
-        divWelcome.innerHTML = "Welcome " + myMSALObj.getAccount().userName + " to Microsoft Graph API";
+        divWelcome.innerHTML = 'Welcome ' + myMSALObj.getAccount().userName + ' to Microsoft Graph API';
         var loginbutton = document.getElementById('SignIn');
         loginbutton.innerHTML = 'Sign Out';
         loginbutton.setAttribute('onclick', 'signOut();');
-    }
+      }
 
-   //This function can be removed if you do not need to support IE
-   function acquireTokenRedirectAndCallMSGraph() {
+      //This function can be removed if you do not need to support IE
+      function acquireTokenRedirectAndCallMSGraph() {
         //Always start with acquireTokenSilent to obtain a token in the signed in user from cache
-        myMSALObj.acquireTokenSilent(requestObj).then(function (tokenResponse) {
+        myMSALObj
+          .acquireTokenSilent(requestObj)
+          .then(function(tokenResponse) {
             callMSGraph(graphConfig.graphMeEndpoint, tokenResponse.accessToken, graphAPICallback);
-        }).catch(function (error) {
+          })
+          .catch(function(error) {
             console.log(error);
             // Upon acquireTokenSilent failure (due to consent or interaction or login required ONLY)
             // Call acquireTokenRedirect
             if (requiresInteraction(error.errorCode)) {
-                myMSALObj.acquireTokenRedirect(requestObj);
+              myMSALObj.acquireTokenRedirect(requestObj);
             }
-        });
-    }
+          });
+      }
 
-    function authRedirectCallBack(error, response) {
+      function authRedirectCallBack(error, response) {
         if (error) {
-            console.log(error);
+          console.log(error);
         } else {
-            if (response.tokenType === "access_token") {
-                callMSGraph(graphConfig.graphMeEndpoint, response.accessToken, graphAPICallback);
-            } else {
-                console.log("token type is:" + response.tokenType);
-            }
+          if (response.tokenType === 'access_token') {
+            callMSGraph(graphConfig.graphMeEndpoint, response.accessToken, graphAPICallback);
+          } else {
+            console.log('token type is:' + response.tokenType);
+          }
         }
-    }
+      }
 
-    function requiresInteraction(errorCode) {
+      function requiresInteraction(errorCode) {
         if (!errorCode || !errorCode.length) {
-            return false;
+          return false;
         }
-        return errorCode === "consent_required" ||
-            errorCode === "interaction_required" ||
-            errorCode === "login_required";
-    }
+        return (
+          errorCode === 'consent_required' || errorCode === 'interaction_required' || errorCode === 'login_required'
+        );
+      }
 
-    // Browser check variables
-    var ua = window.navigator.userAgent;
-    var msie = ua.indexOf('MSIE ');
-    var msie11 = ua.indexOf('Trident/');
-    var msedge = ua.indexOf('Edge/');
-    var isIE = msie > 0 || msie11 > 0;
-    var isEdge = msedge > 0;
+      // Browser check variables
+      var ua = window.navigator.userAgent;
+      var msie = ua.indexOf('MSIE ');
+      var msie11 = ua.indexOf('Trident/');
+      var msedge = ua.indexOf('Edge/');
+      var isIE = msie > 0 || msie11 > 0;
+      var isEdge = msedge > 0;
 
-    //If you support IE, our recommendation is that you sign-in using Redirect APIs
-    //If you as a developer are testing using Edge InPrivate mode, please add "isEdge" to the if check
+      //If you support IE, our recommendation is that you sign-in using Redirect APIs
+      //If you as a developer are testing using Edge InPrivate mode, please add "isEdge" to the if check
 
-    // can change this to default an experience outside browser use
-    var loginType = isIE ? "REDIRECT" : "POPUP";
+      // can change this to default an experience outside browser use
+      var loginType = isIE ? 'REDIRECT' : 'POPUP';
 
-    // runs on page load, change config to try different login types to see what is best for your application
-    if (loginType === 'POPUP') {
-        if (myMSALObj.getAccount()) {// avoid duplicate code execution on page load in case of iframe and popup window.
-            showWelcomeMessage();
-            acquireTokenPopupAndCallMSGraph();
+      // runs on page load, change config to try different login types to see what is best for your application
+      if (loginType === 'POPUP') {
+        if (myMSALObj.getAccount()) {
+          // avoid duplicate code execution on page load in case of iframe and popup window.
+          showWelcomeMessage();
+          acquireTokenPopupAndCallMSGraph();
         } else {
-            mgt.Providers.globalProvider.setState(mgt.ProviderState.SignedOut);
+          mgt.Providers.globalProvider.setState(mgt.ProviderState.SignedOut);
         }
-    }
-    else if (loginType === 'REDIRECT') {
-        document.getElementById("SignIn").onclick = function () {
-            myMSALObj.loginRedirect(requestObj);
+      } else if (loginType === 'REDIRECT') {
+        document.getElementById('SignIn').onclick = function() {
+          myMSALObj.loginRedirect(requestObj);
         };
 
-        if (myMSALObj.getAccount() && !myMSALObj.isCallback(window.location.hash)) {// avoid duplicate code execution on page load in case of iframe and popup window.
-            showWelcomeMessage();
-            acquireTokenRedirectAndCallMSGraph();
+        if (myMSALObj.getAccount() && !myMSALObj.isCallback(window.location.hash)) {
+          // avoid duplicate code execution on page load in case of iframe and popup window.
+          showWelcomeMessage();
+          acquireTokenRedirectAndCallMSGraph();
         } else {
-            mgt.Providers.globalProvider.setState(mgt.ProviderState.SignedOut);
+          mgt.Providers.globalProvider.setState(mgt.ProviderState.SignedOut);
         }
-    } else {
+      } else {
         console.error('Please set a valid login type');
-    }
-</script>
-</body>
+      }
+    </script>
+  </body>
 </html>
