--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -5,7 +5,7 @@
       lineage: true
     },
     coreData: {
-      appId: 'JS:JSLLTest'
+      appId: 'JS:GraphToolkit'
     }
   };
   awa.init(config);
