Add proper css to fix scroll.

--- a/.storybook/preview-body.html
+++ b/.storybook/preview-body.html
@@ -17,16 +17,16 @@
   }
 
   .story-mgt-preview {
+    margin: 0.5em;
+  }
+
+  .story-mgt-preview-wrapper {
     position: relative;
     height: 100%;
-    width: calc(50% - 1em);
+    width: 50%;
     float: left;
     overflow: auto;
     background-color: #ffffff;
-  }
-
-  .story-mgt-preview:first-child {
-    margin: 0.5em;
   }
 
   .story-mgt-editor {
@@ -61,8 +61,8 @@
   }
 
   @media (max-width: 768px) {
-    .story-mgt-preview {
-      height: calc(50% - 1em);
+    .story-mgt-preview-wrapper {
+      height: 50%;
       width: 100%;
     }
 
@@ -74,7 +74,7 @@
     .story-mgt-separator {
       cursor: ns-resize;
       width: 100%;
-      height: 1px;
+      height: 0px;
     }
 
     .story-mgt-separator:after {
