--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <mgt-login></mgt-login>
     <mgt-person person-query="me" show-name show-email person-card="hover"></mgt-person>
     <mgt-people-picker></mgt-people-picker>
+    <mgt-teams-channel-picker></mgt-teams-channel-picker>
     <mgt-tasks data-source="todo"></mgt-tasks>
     <mgt-agenda group-by-day></mgt-agenda>
     <mgt-people></mgt-people>
