--- a/.storybook/preview-body.html
+++ b/.storybook/preview-body.html
@@ -14,6 +14,7 @@
     height: 100%;
     width: 100%;
     position: relative;
+    display: flex;
   }
 
   .story-mgt-preview {
@@ -62,6 +63,10 @@
   }
 
   @media (max-width: 768px) {
+    .story-mgt-root {
+      flex-direction: column;
+    }
+
     .story-mgt-preview-wrapper {
       height: 50%;
       width: 100%;
