--- a/.storybook/preview-body.html
+++ b/.storybook/preview-body.html
@@ -14,6 +14,7 @@
     height: 100%;
     width: 100%;
     position: relative;
+    display: flex;
   }
 
   .story-mgt-preview {
@@ -30,11 +31,12 @@
   }
 
   .story-mgt-editor {
-    width: 50%;
+    width: calc(50% - 1px);
     height: 100%;
     position: relative;
     float: left;
     overflow: hidden;
+    border-left: 1px solid #e7e7e7;
   }
 
   .story-mgt-separator {
@@ -61,14 +63,20 @@
   }
 
   @media (max-width: 768px) {
+    .story-mgt-root {
+      flex-direction: column;
+    }
+
     .story-mgt-preview-wrapper {
       height: 50%;
       width: 100%;
     }
 
     .story-mgt-editor {
-      height: 50%;
+      height: calc(50% - 1px);
       width: 100%;
+      border-left: none;
+      border-top: 1px solid #e7e7e7;
     }
 
     .story-mgt-separator {
