Small tweak to index.html

--- a/packages/mgt/index.html
+++ b/packages/mgt/index.html
@@ -13,7 +13,7 @@
 
     <!-- <script src="./dist/bundle/mgt-loader.js"></script> -->
 
-    <script type="module" src="dist/es6/index.js"></script>
+    <script type="module" src="./dist/es6/index.js"></script>
     <script type="module" src="./dist/es6/mock/mgt-mock-provider.js"></script>
   </head>
 
