--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -1,5 +1,23 @@
+<script src="https://consentdeliveryfd.azurefd.net/mscc/lib/v2/wcp-consent.js"></script>
 <script src="https://az725175.vo.msecnd.net/scripts/jsll-4.js" type="text/javascript"></script>
 <script type="text/javascript">
+  function onConsentChanged(categoryPreferences) {
+    console.log('onConsentChanged', categoryPreferences);
+  }
+
+  WcpConsent.init(
+    'en-US',
+    'cookie-banner',
+    function(err, _siteConsent) {
+      if (err != undefined) {
+        return error;
+      } else {
+        siteConsent = _siteConsent; //siteConsent is used to get the current consent
+      }
+    },
+    onConsentChanged
+  );
+
   var config = {
     autoCapture: {
       lineage: true
@@ -11,3 +29,29 @@
   awa.init(config);
 </script>
 <link rel="shortcut icon" type="image/png" href="/favicon.png" />
+<div id="cookie-banner"></div>
+<footer class="storybook-footer">
+  Microsoft Graph Toolkit Playground was founded by Microsoft as a community guided, open source project.
+  <a href="https://privacy.microsoft.com/en-us/privacystatement">Privacy & cookies</a>
+  <a href="https://www.microsoft.com/en-us/legal/intellectualproperty/copyright/default">Term of use</a>
+</footer>
+<style>
+  .storybook-footer {
+    position: absolute;
+    bottom: 0;
+    font-size: 11px;
+    padding: 10px;
+    width: 100%;
+    text-align: center;
+    z-index: 9999;
+    background-color: #f2f2f2;
+  }
+
+  .storybook-footer a {
+    color: #616161;
+  }
+
+  .storybook-footer a:hover {
+    color: #323232;
+  }
+</style>
