--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -1,10 +1,6 @@
 <script src="https://consentdeliveryfd.azurefd.net/mscc/lib/v2/wcp-consent.js"></script>
 <script src="https://az725175.vo.msecnd.net/scripts/jsll-4.js" type="text/javascript"></script>
 <script type="text/javascript">
-  function onConsentChanged(categoryPreferences) {
-    console.log('onConsentChanged', categoryPreferences);
-  }
-
   WcpConsent.init(
     'en-US',
     'cookie-banner',
@@ -18,15 +14,20 @@
     onConsentChanged
   );
 
-  var config = {
-    autoCapture: {
-      lineage: true
-    },
-    coreData: {
-      appId: 'JS:GraphToolkit'
+  function onConsentChanged(consentCategories) {
+    if (siteConsent.getConsentFor(WcpConsent.consentCategories.Analytics)) {
+      // add analytics
+      var config = {
+        autoCapture: {
+          lineage: true
+        },
+        coreData: {
+          appId: 'JS:GraphToolkit'
+        }
+      };
+      awa.init(config);
     }
-  };
-  awa.init(config);
+  }
 </script>
 <link rel="shortcut icon" type="image/png" href="/favicon.png" />
 <div id="cookie-banner"></div>
