--- a/packages/mgt/index.html
+++ b/packages/mgt/index.html
@@ -34,10 +34,12 @@
 
     <mgt-login></mgt-login>
     <mgt-person person-query="me" view="twoLines" person-card="hover" show-presence></mgt-person>
+    <mgt-person user-id="2d5b9a17-2350-4dc3-bd09-cfaffa8f744e" view="twoLines"></mgt-person>
     <mgt-people-picker></mgt-people-picker>
     <mgt-teams-channel-picker></mgt-teams-channel-picker>
     <mgt-tasks data-source="todo"></mgt-tasks>
     <mgt-agenda group-by-day></mgt-agenda>
     <mgt-people show-presence></mgt-people>
+    <mgt-people group-id="621eaa5c-4ac8-4aa9-b676-29054bc96adf"></mgt-people>
   </body>
 </html>
