--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -1,3 +1,11 @@
+<link rel="shortcut icon" type="image/png" href="/favicon.png" />
+<div id="cookie-banner"></div>
+<footer class="storybook-footer">
+  Microsoft Graph Toolkit Playground was founded by Microsoft as a community guided, open source project.
+  <a href="https://privacy.microsoft.com/en-us/privacystatement">Privacy & cookies</a>
+  <a href="https://www.microsoft.com/en-us/legal/intellectualproperty/copyright/default">Term of use</a>
+</footer>
+
 <script src="https://consentdeliveryfd.azurefd.net/mscc/lib/v2/wcp-consent.js"></script>
 <script src="https://az725175.vo.msecnd.net/scripts/jsll-4.js" type="text/javascript"></script>
 <script type="text/javascript">
@@ -6,7 +14,7 @@
     'cookie-banner',
     function(err, _siteConsent) {
       if (err != undefined) {
-        return error;
+        return err;
       } else {
         siteConsent = _siteConsent; //siteConsent is used to get the current consent
       }
@@ -15,6 +23,7 @@
   );
 
   function onConsentChanged(consentCategories) {
+    console.log('consentCatogories', consentCategories);
     if (siteConsent.getConsentFor(WcpConsent.consentCategories.Analytics)) {
       // add analytics
       var config = {
@@ -29,13 +38,7 @@
     }
   }
 </script>
-<link rel="shortcut icon" type="image/png" href="/favicon.png" />
-<div id="cookie-banner"></div>
-<footer class="storybook-footer">
-  Microsoft Graph Toolkit Playground was founded by Microsoft as a community guided, open source project.
-  <a href="https://privacy.microsoft.com/en-us/privacystatement">Privacy & cookies</a>
-  <a href="https://www.microsoft.com/en-us/legal/intellectualproperty/copyright/default">Term of use</a>
-</footer>
+
 <style>
   #root > div:first-of-type {
     height: calc(100% - 40px);
