Add stories to show mgt-person dark mode

--- a/.storybook/preview-body.html
+++ b/.storybook/preview-body.html
@@ -4,6 +4,8 @@
   #root {
     height: 100%;
     width: 100%;
+    font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, Roboto,
+      'Helvetica Neue', sans-serif;
   }
 
   body {
