added cache options for enabling/disabling and changing invalidation time for cache stores

--- a/packages/mgt/index.html
+++ b/packages/mgt/index.html
@@ -40,6 +40,7 @@
     <mgt-tasks data-source="todo"></mgt-tasks>
     <mgt-agenda group-by-day></mgt-agenda>
     <mgt-people show-presence></mgt-people>
+    <mgt-people user-ids="2d5b9a17-2350-4dc3-bd09-cfaffa8f744e, ee30c9c9-c437-404c-8700-3760db95e334"></mgt-people>
     <mgt-people group-id="621eaa5c-4ac8-4aa9-b676-29054bc96adf"></mgt-people>
   </body>
 </html>
