--- a/auth.html
+++ b/auth.html
@@ -1,12 +1,12 @@
 <html>
   <head>
     <script src="https://unpkg.com/@microsoft/teams-js/dist/MicrosoftTeams.min.js" crossorigin="anonymous"></script>
-    <!-- <script src="./dist/bundle/mgt-loader.js"></script>
+    <!-- <script src="./packages/mgt/dist/bundle/mgt-loader.js"></script>
     <script>
       mgt.TeamsProvider.handleAuth();
     </script> -->
     <script type="module">
-      import { TeamsProvider } from './dist/es6/providers/TeamsProvider.js';
+      import { TeamsProvider } from './packages/mgt/dist/es6/providers/TeamsProvider.js';
       TeamsProvider.handleAuth();
     </script>
   </head>
