--- a/samples/examples/agenda-extensions.html
+++ b/samples/examples/agenda-extensions.html
@@ -9,8 +9,8 @@
     <my-agenda></my-agenda>
 
     <script type="module">
-      import { MgtAgenda } from '../../dist/es6/index.js';
-      import { html, css } from '../../node_modules/lit-element/lit-element.js';
+      import { MgtAgenda } from '../../packages/mgt/dist/es6/index.js';
+      import { html, css } from '../../packages/mgt/node_modules/lit-element/lit-element.js';
 
       class MyAgenda extends MgtAgenda {
         static get styles() {
