Backing out mgt-planner

--- a/packages/mgt/index.html
+++ b/packages/mgt/index.html
@@ -39,5 +39,6 @@
     <mgt-tasks data-source="todo"></mgt-tasks>
     <mgt-agenda group-by-day></mgt-agenda>
     <mgt-people show-presence></mgt-people>
+    <mgt-todo></mgt-todo>
   </body>
 </html>
