Updated paths in samples and added bundle command to build

--- a/samples/examples/people-picker.html
+++ b/samples/examples/people-picker.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <script src="https://unpkg.com/@microsoft/mgt/dist/bundle/mgt-loader.js"></script>
+    <script src="../../packages/mgt/dist/es6/index.js"></script>
   </head>
 
   <body>
@@ -23,7 +23,6 @@
     </div>
   </body>
   <script>
-
     let picker1 = document.getElementById('picker1');
     let chosenArea = document.getElementById('chosenPeople');
     let groupChooser = document.getElementById('groupChooser');
