--- a/samples/examples/teams-auth.html
+++ b/samples/examples/teams-auth.html
@@ -1,11 +1,11 @@
 <html>
   <head>
     <script src="https://unpkg.com/@microsoft/teams-js/dist/MicrosoftTeams.min.js" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/@microsoft/mgt/dist/bundle/mgt-loader.js"></script>
+    <script src="../../packages/mgt/dist/es6/index.js"></script>
   </head>
   <body>
     <script>
-        mgt.TeamsProvider.handleAuth();
+      mgt.TeamsProvider.handleAuth();
     </script>
   </body>
 </html>
