--- a/samples/teams-tab/auth.html
+++ b/samples/teams-tab/auth.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script src="https://unpkg.com/@microsoft/teams-js/dist/MicrosoftTeams.min.js" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/@microsoft/mgt/dist/bundle/mgt-loader.js"></script>
+    <script src="../../packages/mgt/dist/es6/index.js"></script>
     <script>
       mgt.TeamsProvider.handleAuth();
     </script>
