--- a/samples/examples/teams.html
+++ b/samples/examples/teams.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script src="https://unpkg.com/@microsoft/teams-js/dist/MicrosoftTeams.min.js" crossorigin="anonymous"></script>
-    <script src="../../packages/mgt/dist/es6/index.js"></script>
+    <script type="module" src="../../packages/mgt/dist/es6/index.js"></script>
   </head>
   <body>
     <mgt-teams-provider
