Migrate to yarn! (#591)
* Migrated to yarn!

* Updated paths in samples and added bundle command to build

* Adjustment to build:bundle command

* Simplified package command

* Update contributing doc with build steps

* Typo

* Integrating tsconfig.base.json into the root tsconfig.json

* Adjusted build script

* fixed samples

Co-authored-by: Nikola Metulev <nikolame@microsoft.com>

--- a/samples/examples/mgt-flyout/index.html
+++ b/samples/examples/mgt-flyout/index.html
@@ -9,7 +9,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="../../../packages/mgt/dist/bundle/mgt-loader.js"></script>
+    <script type="module" src="../../packages/mgt/dist/es6/index.js"></script>
     <script src="./window-segments-polyfill.js"></script>
     <script>
       const screenSegments = window.getWindowSegments();
