--- a/samples/examples/cache.html
+++ b/samples/examples/cache.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <script type="module" src="../../packages/mgt/dist/es6/mock/mgt-mock-provider.js"></script>
-
+    <title>MGT Cache Sample</title>
     <script type="module">
       import { CacheService } from '../../packages/mgt/dist/es6/index.js';
 
@@ -41,7 +41,6 @@
     <mgt-mock-provider></mgt-mock-provider>
 
     <button id="CacheButton" type="button"></button>
-    <!-- <button id="DisableCacheButton" type="button">Disable Cache</button> -->
     <button id="ClearCacheButton" type="button">Clear Cache</button>
 
     <mgt-login></mgt-login>
@@ -53,7 +52,7 @@
     <mgt-teams-channel-picker></mgt-teams-channel-picker>
     <mgt-tasks data-source="todo"></mgt-tasks>
     <mgt-agenda group-by-day></mgt-agenda>
-    <mgt-people show-presence></mgt-people>
+    <mgt-people show-presence show-max="10"></mgt-people>
     <mgt-people group-id="02bd9fd6-8f93-4758-87c3-1fb73740a315"></mgt-people>
     <mgt-people user-ids="4782e723-f4f4-4af3-a76e-25e3bab0d896, f5289423-7233-4d60-831a-fe107a8551cc"></mgt-people>
   </body>
