Handle message click in person card

--- a/samples/examples/person-card.html
+++ b/samples/examples/person-card.html
@@ -3,7 +3,11 @@
     <script type="module" src="../../packages/mgt/dist/es6/index.js"></script>
   </head>
   <body>
-    <mgt-msal-provider client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"></mgt-msal-provider>
+    <mgt-msal-provider
+      scopes="user.read,people.read,user.readbasic.all,contacts.read,calendars.read,Files.ReadWrite.All,Sites.ReadWrite.All"
+      client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"
+    >
+    </mgt-msal-provider>
     <mgt-login></mgt-login>
 
     <mgt-person-card person-query="me"></mgt-person-card>
