Updated vue-app to use local packages

--- a/samples/teams-tab/index.html
+++ b/samples/teams-tab/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script src="https://unpkg.com/@microsoft/teams-js/dist/MicrosoftTeams.min.js" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/@microsoft/mgt/dist/bundle/mgt-loader.js"></script>
+    <script src="../../packages/mgt/dist/es6/index.js"></script>
   </head>
   <body>
     <mgt-teams-provider client-id="<CLIENT-ID>" auth-popup-url="auth.html"></mgt-teams-provider>
