--- a/samples/examples/onboarding/index.html
+++ b/samples/examples/onboarding/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ignite Demo</title>
+    <title>Onboarding Sample</title>
     <script type="module" src="../../../packages/mgt/dist/es6/index.js"></script>
   </head>
   <body>
