Adding support for group filtering

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <mgt-msal-provider
       client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"
       scopes="user.read,people.read,user.readbasic.all,contacts.read,calendars.read"
-      redirect-uri="http://localhost:3000"
+      redirect-uri="http://localhost:4000"
       depends-on="mgt-teams-provider"
     ></mgt-msal-provider>
 
@@ -40,5 +40,6 @@
     <mgt-agenda group-by-day></mgt-agenda>
     <mgt-people show-presence></mgt-people>
     <mgt-todo></mgt-todo>
+    <mgt-people-picker group-id="87feb403-9e45-4386-85cc-f7f56986d7d4"></mgt-people-picker>
   </body>
 </html>
