Started adding getScopes

--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
 
     <script type="module" src="./packages/mgt/dist/es6/index.js"></script>
     <script type="module" src="./packages/mgt/dist/es6/mock/mgt-mock-provider.js"></script>
+
+    <script type="module">
+      import { Providers, MsalProvider, MgtPerson, MgtAgenda } from './packages/mgt/dist/es6/index.js';
+
+      let scopes = [...new Set([...MgtPerson.getScopes(), ...MgtAgenda.scopes])];
+
+      console.log(scopes);
+
+      Providers.globalProvider = new MsalProvider({
+        clientId: 'a974dfa0-9f57-49b9-95db-90f04ce2111a'
+      });
+    </script>
   </head>
 
   <body>
-    <mgt-teams-provider
-      client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"
-      auth-popup-url="auth.html"
-    ></mgt-teams-provider>
-
-    <mgt-msal-provider
-      client-id="a974dfa0-9f57-49b9-95db-90f04ce2111a"
-      scopes="user.read,people.read,user.readbasic.all,contacts.read,calendars.read,presence.read.all,tasks.readwrite,presence.read,user.read.all,group.read.all,tasks.read"
-      redirect-uri="http://localhost:3000"
-      depends-on="mgt-teams-provider"
-    ></mgt-msal-provider>
-
     <!-- <mgt-mock-provider></mgt-mock-provider> -->
 
     <mgt-login></mgt-login>
