Changed story rendering from div to iframe and added support for importing mgt exports

--- a/.storybook/preview-body.html
+++ b/.storybook/preview-body.html
@@ -20,7 +20,12 @@
   }
 
   .story-mgt-preview {
-    margin: 0.5em;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    border: none;
+    background: none;
+    padding: 0;
   }
 
   .story-mgt-preview-wrapper {
@@ -28,7 +33,6 @@
     height: 100%;
     width: 50%;
     float: left;
-    overflow: auto;
     background-color: #ffffff;
   }
 
