--- a/samples/examples/mgt-flyout/index.html
+++ b/samples/examples/mgt-flyout/index.html
@@ -50,7 +50,7 @@
 
     <!-- Uncomment to add some vertical height to the page. -->
     <!--
-    <mgt-person person-query="me" show-name show-email person-card="hover"></mgt-person>
+    <mgt-person person-query="me" view="twolines" person-card="hover"></mgt-person>
     <mgt-people-picker></mgt-people-picker>
     <mgt-tasks data-source="todo"></mgt-tasks>
     <mgt-agenda group-by-day></mgt-agenda>
